# selp

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: index.html
docs/: index.html
docs/static/js/: index.js
scripts/: constrained_plan_generate.py  equivalence_vote.py  evaluate_ltl.py  evaluate_plan.py  infer_ltl.py  run_example_pipeline_eval.py  vote_and_combine_ltl.py
src/selp/: __init__.py  config.py  constrained_decoding.py  equivalence_voting.py  io.py  ltl.py  ltl_translation.py  modeling.py  plan_evaluation.py  training.py
