[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selp"
version = "0.1.0"
description = "Clean SELP release code for LTL translation voting, constrained plan decoding, training, and evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
ml = [
    "accelerate>=0.25",
    "datasets>=2.16",
    "torch>=2.1",
    "transformers>=4.36",
]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
